...

//MARK: - Authentication functions

extension Auth: AuthRequestFactory {
    
    func login(userName: String,
               password: String,
               completionHandler: @escaping (AFDataResponse<LoginResult>) -> Void) {
        let requestModel = Login(baseUrl: baseUrl!, login: userName, password: password)
        self.request(request: requestModel, completionHandler: completionHandler)
    }

    func registration(userName: String,
...
        let method: HTTPMethod = .get
        let path: String = "login.json"
        
        let login: String
        let password: String
        var parameters: Parameters? {
            return ["username": login,
                    "password": password]
        }
    }

    struct Registration: RequestRouter {
        let baseUrl: URL
...
