...
        navigationController?.navigationBar.isHidden = true
        if !isNeedLogin {
            loadBasket()
        } else {
            login(delegate: self)
            isNeedLoginLabel.text = "Необходима авторизация"
            isNeedLoginButton.setTitle("Войти", for: .normal)
        }
    }
    
    // MARK: - Methods
    
    func toggleBasketInterface(hide: Bool = true) {
...
